module2/k8s/llm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm
  namespace: genai
  labels:
    app: llm
    tier: model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llm
      tier: model
  template:
    metadata:
      labels:
        app: llm
        tier: model
    spec:
      containers:
        - name: ollama
          image: arjunachari12/genai-ollama:1.0.0
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "/entrypoint.sh"]
          ports:
            - containerPort: 11434
              name: http
          volumeMounts:
            - name: ollama-models
              mountPath: /root/.ollama
          readinessProbe:
            httpGet:
              path: /api/tags
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /api/tags
              port: http
            initialDelaySeconds: 40
            periodSeconds: 30
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: "1"
              memory: 2Gi
      volumes:
        - name: ollama-models
          persistentVolumeClaim:
            claimName: ollama-models-pvc
